version/0.6/_sources/examples/02-SBR+/SBR_Example.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\02-SBR+\SBR_Example.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_02-SBR+_SBR_Example.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_02-SBR+_SBR_Example.py:


SBR+: HFSS to SBR+ coupling
---------------------------
This example shows how you can use PyAEDT to create an HFSS SBR+ project from an
HFSS antenna and run a simulation.

.. GENERATED FROM PYTHON SOURCE LINES 8-12

Perform required imports
~~~~~~~~~~~~~~~~~~~~~~~~
Perrform rquired imports and set up the local path to the path for the PyAEDT
directory.

.. GENERATED FROM PYTHON SOURCE LINES 12-18

.. code-block:: default


    import os
    import pyaedt

    project_full_name = pyaedt.downloads.download_sbr(pyaedt.generate_unique_project_name(project_name="sbr_freq"))








.. GENERATED FROM PYTHON SOURCE LINES 19-23

Set non-graphical mode
~~~~~~~~~~~~~~~~~~~~~~
Set non-graphical mode. 
You can set ``non_graphical`` either to ``True`` or ``False``.

.. GENERATED FROM PYTHON SOURCE LINES 23-26

.. code-block:: default


    non_graphical = False








.. GENERATED FROM PYTHON SOURCE LINES 27-31

Define designs
~~~~~~~~~~~~~~
Define two designs, one source and one target, with each design connected to
a different object.

.. GENERATED FROM PYTHON SOURCE LINES 31-46

.. code-block:: default


    target = pyaedt.Hfss(
        projectname=project_full_name,
        designname="Cassegrain_",
        solution_type="SBR+",
        specified_version="2023.2",
        new_desktop_session=True,
        non_graphical=non_graphical
    )

    source = pyaedt.Hfss(projectname=target.project_name,
                         designname="feeder",
                         specified_version="2023.2",
                         )





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Initializing new desktop!
    Returning found desktop with PID 14156!




.. GENERATED FROM PYTHON SOURCE LINES 47-50

Define linked antenna
~~~~~~~~~~~~~~~~~~~~~~~
Define a linked antenna. This is HFSS far field applied to HFSS SBR+.

.. GENERATED FROM PYTHON SOURCE LINES 50-53

.. code-block:: default


    target.create_sbr_linked_antenna(source, target_cs="feederPosition", fieldtype="farfield")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <pyaedt.modules.Boundary.NativeComponentObject object at 0x000001D983FC7760>



.. GENERATED FROM PYTHON SOURCE LINES 54-57

Assign boundaries
~~~~~~~~~~~~~~~~~
Assign boundaries.

.. GENERATED FROM PYTHON SOURCE LINES 57-61

.. code-block:: default


    target.assign_perfecte_to_sheets(["Reflector", "Subreflector"])
    target.mesh.assign_curvilinear_elements(["Reflector", "Subreflector"])





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <pyaedt.modules.Mesh.MeshOperation object at 0x000001D98346DA20>



.. GENERATED FROM PYTHON SOURCE LINES 62-65

Plot model
~~~~~~~~~~
Plot the model

.. GENERATED FROM PYTHON SOURCE LINES 65-69

.. code-block:: default


    source.plot(show=False, export_path=os.path.join(target.working_directory, "Source.jpg"), plot_air_objects=True)
    target.plot(show=False, export_path=os.path.join(target.working_directory, "Target.jpg"), plot_air_objects=False)




.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /examples/02-SBR+/images/sphx_glr_SBR_Example_001.png
          :alt: SBR Example
          :srcset: /examples/02-SBR+/images/sphx_glr_SBR_Example_001.png
          :class: sphx-glr-multi-img

    *

      .. image-sg:: /examples/02-SBR+/images/sphx_glr_SBR_Example_002.png
          :alt: SBR Example
          :srcset: /examples/02-SBR+/images/sphx_glr_SBR_Example_002.png
          :class: sphx-glr-multi-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <pyaedt.generic.plot.ModelPlotter object at 0x000001D98346EEF0>



.. GENERATED FROM PYTHON SOURCE LINES 70-73

Create setup and solve
~~~~~~~~~~~~~~~~~~~~~~~~
Create a setup and solve it.

.. GENERATED FROM PYTHON SOURCE LINES 73-83

.. code-block:: default


    setup1 = target.create_setup()
    setup1.props["RadiationSetup"] = "ATK_3D"
    setup1.props["ComputeFarFields"] = True
    setup1.props["RayDensityPerWavelength"] = 2
    setup1.props["MaxNumberOfBounces"] = 3
    setup1["RangeType"] = "SinglePoints"
    setup1["RangeStart"] = "10GHz"
    target.analyze()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True



.. GENERATED FROM PYTHON SOURCE LINES 84-87

Plot results
~~~~~~~~~~~~
Plot results.

.. GENERATED FROM PYTHON SOURCE LINES 87-101

.. code-block:: default


    variations = target.available_variations.nominal_w_values_dict
    variations["Freq"] = ["10GHz"]
    variations["Theta"] = ["All"]
    variations["Phi"] = ["All"]
    target.post.create_report(
        "db(GainTotal)",
        target.nominal_adaptive,
        variations=variations,
        primary_sweep_variable="Theta",
        context="ATK_3D",
        report_category="Far Fields",
    )





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <pyaedt.modules.report_templates.FarField object at 0x000001D98346ED10>



.. GENERATED FROM PYTHON SOURCE LINES 102-105

Plot results outside AEDT
~~~~~~~~~~~~~~~~~~~~~~~~~
Plot results using Matplotlib.

.. GENERATED FROM PYTHON SOURCE LINES 105-116

.. code-block:: default


    solution = target.post.get_solution_data(
        "GainTotal",
        target.nominal_adaptive,
        variations=variations,
        primary_sweep_variable="Theta",
        context="ATK_3D",
        report_category="Far Fields",
    )
    solution.plot()




.. image-sg:: /examples/02-SBR+/images/sphx_glr_SBR_Example_003.png
   :alt: Simulation Results Plot
   :srcset: /examples/02-SBR+/images/sphx_glr_SBR_Example_003.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Figure size 2000x1000 with 1 Axes>



.. GENERATED FROM PYTHON SOURCE LINES 117-120

Release AEDT
~~~~~~~~~~~~
Release AEDT and close the example.

.. GENERATED FROM PYTHON SOURCE LINES 120-122

.. code-block:: default


    target.release_desktop()




.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (2 minutes 28.718 seconds)


.. _sphx_glr_download_examples_02-SBR+_SBR_Example.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: SBR_Example.py <SBR_Example.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: SBR_Example.ipynb <SBR_Example.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
